# qaoa-porfolio

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.sh
docs/: dataloader.md
python/: pytest.ini  requirements.txt  setup.py
python/qaoa_portfolio/: __init__.py  config.py  data_loader.py  exceptions.py  metrics.py  params.py  portfolios.py  utils.py
python/tests/: __init__.py  conftest.py  test_data_integration.py  test_data_loader.py  test_portfolios.py  test_simple_integration.py  utils.py
python/tests/data/: README.md
