[package]
name = "qaoa-portfolio"
version = "0.1.0"
edition = "2024"
authors = ["dasobral <dasobral93@gmail.com>"]
description = "High-performance QAOA implementation for portfolio optimization"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/dasobral/qaoa-portfolio"
keywords = ["quantum", "optimization", "portfolio", "finance", "qaoa"]
categories = ["science", "algorithms", "mathematics"]

[lib]
name = "qaoa_portfolio"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Linear algebra and numerical computing
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"

# Performance and parallelization
rayon = "1.7"
tokio = { version = "1.0", features = ["full"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Mathematical optimization
argmin = "0.8"

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI (optional, for standalone usage)
clap = { version = "4.4", features = ["derive"], optional = true }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
env_logger = "0.10"

[features]
default = []
cli = ["clap"]
python-bindings = ["pyo3"]

# Benchmarks
[[bench]]
name = "portfolio_optimization"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
